tests/snapshots/parser_tests__parser@for.snap
---
source: tests/parser_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
SyntaxTree {
    node: File,
    children: [
        SyntaxTree {
            node: Function {
                result_type: "int",
                name: "Main",
                arguments: "",
            },
            children: [
                SyntaxTree {
                    node: Line {
                        value: "int x = 0",
                    },
                    children: [],
                },
                SyntaxTree {
                    node: For {
                        condition: "int i = 0; i < 10; i++",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "x += 2",
                            },
                            children: [],
                        },
                    ],
                },
                SyntaxTree {
                    node: Line {
                        value: "return x",
                    },
                    children: [],
                },
            ],
        },
    ],
}
