tests/snapshots/parser_tests__parser@return.snap
---
source: tests/parser_tests.rs
assertion_line: 28
expression: "format!(\"{:#?}\", tree)"
---
SyntaxTree {
    node: File,
    children: [
        SyntaxTree {
            node: Function {
                result_type: "int",
                name: "Main",
                arguments: "",
            },
            children: [
                SyntaxTree {
                    node: If {
                        condition: "false",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "return 1",
                            },
                            children: [],
                        },
                    ],
                },
                SyntaxTree {
                    node: ElseIf {
                        condition: "true",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "return 2",
                            },
                            children: [],
                        },
                    ],
                },
                SyntaxTree {
                    node: Else,
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "return 3",
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
