tests/snapshots/parser_tests__parser@scopes.snap
---
source: tests/parser_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
SyntaxTree {
    node: File,
    children: [
        SyntaxTree {
            node: Class {
                name: "App",
            },
            children: [
                SyntaxTree {
                    node: Function {
                        result_type: "int",
                        name: "f",
                        arguments: "int x",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "return x + 5",
                            },
                            children: [],
                        },
                    ],
                },
                SyntaxTree {
                    node: Function {
                        result_type: "void",
                        name: "Main",
                        arguments: "",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "int x = 0",
                            },
                            children: [],
                        },
                        SyntaxTree {
                            node: Line {
                                value: "int b = 1",
                            },
                            children: [],
                        },
                        SyntaxTree {
                            node: If {
                                condition: "x > b",
                            },
                            children: [
                                SyntaxTree {
                                    node: If {
                                        condition: "x + 1 > b",
                                    },
                                    children: [],
                                },
                                SyntaxTree {
                                    node: Else,
                                    children: [],
                                },
                            ],
                        },
                        SyntaxTree {
                            node: ElseIf {
                                condition: "x < b",
                            },
                            children: [],
                        },
                        SyntaxTree {
                            node: Else,
                            children: [],
                        },
                        SyntaxTree {
                            node: While {
                                condition: "true",
                            },
                            children: [
                                SyntaxTree {
                                    node: If {
                                        condition: "x == 9",
                                    },
                                    children: [
                                        SyntaxTree {
                                            node: Line {
                                                value: "x++",
                                            },
                                            children: [],
                                        },
                                    ],
                                },
                                SyntaxTree {
                                    node: ElseIf {
                                        condition: "x == 10",
                                    },
                                    children: [
                                        SyntaxTree {
                                            node: Line {
                                                value: "break",
                                            },
                                            children: [],
                                        },
                                    ],
                                },
                                SyntaxTree {
                                    node: Line {
                                        value: "x = this.f(x + 1)",
                                    },
                                    children: [],
                                },
                            ],
                        },
                        SyntaxTree {
                            node: For {
                                condition: "int i = 2; i < 10; i++",
                            },
                            children: [
                                SyntaxTree {
                                    node: Line {
                                        value: "x += 2",
                                    },
                                    children: [],
                                },
                            ],
                        },
                        SyntaxTree {
                            node: Line {
                                value: "return",
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
