tests/snapshots/parser_tests__parser@while.snap
---
source: tests/parser_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
SyntaxTree {
    node: File,
    children: [
        SyntaxTree {
            node: Function {
                result_type: "int",
                name: "f",
                arguments: "int x",
            },
            children: [
                SyntaxTree {
                    node: Line {
                        value: "return x + 5",
                    },
                    children: [],
                },
            ],
        },
        SyntaxTree {
            node: Function {
                result_type: "int",
                name: "Main",
                arguments: "",
            },
            children: [
                SyntaxTree {
                    node: Line {
                        value: "int x = 0",
                    },
                    children: [],
                },
                SyntaxTree {
                    node: While {
                        condition: "true",
                    },
                    children: [
                        SyntaxTree {
                            node: If {
                                condition: "x == 9",
                            },
                            children: [
                                SyntaxTree {
                                    node: Line {
                                        value: "x++",
                                    },
                                    children: [],
                                },
                            ],
                        },
                        SyntaxTree {
                            node: ElseIf {
                                condition: "x == 10",
                            },
                            children: [
                                SyntaxTree {
                                    node: Line {
                                        value: "break",
                                    },
                                    children: [],
                                },
                            ],
                        },
                        SyntaxTree {
                            node: Line {
                                value: "x = f(x)",
                            },
                            children: [],
                        },
                    ],
                },
                SyntaxTree {
                    node: Line {
                        value: "return x",
                    },
                    children: [],
                },
            ],
        },
    ],
}
